# util

./: .gitignore  CLAUDE.md  README.md  get_folder_yaml.py  test_ChatGpt.py  テスト手順書_全機能統合版.csv
.claude/: settings.local.json
BO/ssap-partner-portal-bo-backend/: .flake8  package-lock.json  package.json
BO/ssap-partner-portal-bo-frontend/: .env.sup.js  nuxt.config.ts  package.json
FO/: task_ソルバー_ソルバー候補詳細.csv  個人ソルバー不明データ対応_テスト実施手順書.md
FO/ssap-partner-portal-fo-backend/: .flake8  requirements-dev.txt
FO/ssap-partner-portal-fo-frontend/: .env.local.js  .env.sup.js  README.md
myenv/: pyvenv.cfg
pg/: CLAUDE_RULES.md  プロジェクト・スケジュール作成手順書.md  個人ソルバー不明データ対応_テスト手順CSV.csv  個別カルテ作成手順書.md
pg/FO/: CLAUDE.md  SSAP_Partner_Portal_フロントエンド機能説明書.md  SSAP_Partner_Portal_機能説明書.md  個人ソルバー不明データ対応_テスト仕様書.md
pg/iret/: 個別カルテ・スケジュール一覧表示位置変更機能テスト仕様書.md  個別カルテ作成テスト手順Opus4版.csv
pg/reidensha/: CLAUDE.md  ③御見積書　内訳明細サンプル.xlsx  プリザンター改善要望一覧_工数サマリー.csv  プリザンター改善要望一覧_工数見積.csv  プリザンター改善要望一覧_工数見積.md
pg/sanwa-main/: CLAUDE.md  README.md  仕訳202506.TXT  按分経費集計差異原因分析.md  経費取込SQL比較.md
pg/soujitsu/: CLAUDE.md  Excelマクロ分析結果_説明書.md  Pleasanterテーブル設計書.md  Pleasanter実装ガイド.md  VBA本質コード分析.md  (+5 more)
src/: get_folder_content.py  get_folder_yaml.py  openai_chat.py  output.yml  pyproject.toml
temp/: Excel_Format_Documentation.md  analyze_excel_detailed.py  analyze_excel_simple.py  create_excel_format.py  create_xlsx_format.py  ex.xlsx  read_excel.py  sample.xlsx  sample2.xlsx  【Nuxt3】【FO】結合試験テストケース（v２.５）.xlsx  サマリー.csv  テストケーステンプレート.csv  共通_トップ.csv  共通_ログイン.csv  顧客ユーザー_ヘッダー・フッター.csv  顧客ユーザー_ホーム.csv
(+3430 files in other folders)
